# shekinah_app

./: README.md  logs.txt  main.py  pyproject.toml  requirements.txt  run_app.bat  test_debug.py
.github/workflows/: desktop-mobile-build.yml
assets/db/: db_test.sqlite3  produits.csv
assets/drafts/: drafts.df
components/: CustomDraftButton.py  CustomTextField.py
db/: db_utils.py
models/: medicament.py  medicament_entree.py
src/: main.py
src/components/: CustomElevatedButton.py
src/db/: db_utils.py
src/models/: medicament_entree.py
src/utils/: speaker.py
utils/: drafts_utils.py  facture.py  impression_facture.py  impri.py  imprimer.py  nombre_to_chiffre.py  speaker.py
views/: accueil_view.py  dashboard_view.py  entree_stock_view.py  login_view.py  notifications_view.py  principal_view.py  produits_view.py  vente_view.py
