[project]
name = "shekinah_app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flet==0.26.0",
    "pyttsx3",
    "pillow",
    "chardet",
    "reportlab==4.2.5",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.shekinah.app"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Pharmacie Shekinah"

# company name to display in about app dialogs
company = "Pharmacie Shekinah"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

# [tool.flet.app]
# path = "src"

# [tool.flet.flutter.pubspec.dependency_overrides]
# file_picker = "8.1.4"
